--- a/MisCursosXamarin/MisCursosXamarin.Android/MisCursosXamarin.Android.csproj
+++ b/MisCursosXamarin/MisCursosXamarin.Android/MisCursosXamarin.Android.csproj
@@ -139,7 +139,7 @@
     <AndroidResource Include="Resources\drawable\profilePhoto.png" />
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\drawable\icons8-Tienda-50.png" />
+    <AndroidResource Include="Resources\drawable\tienda.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
   <Import Project="..\..\packages\Xamarin.Android.Support.Vector.Drawable.23.3.0\build\Xamarin.Android.Support.Vector.Drawable.targets" Condition="Exists('..\..\packages\Xamarin.Android.Support.Vector.Drawable.23.3.0\build\Xamarin.Android.Support.Vector.Drawable.targets')" />
